--- a/test_random/index.html
+++ b/test_random/index.html
@@ -2,11 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Random food</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <section></section>
+    <div class="btn-img">
     
+</div>
+<script src="./app.js"></script>
 </body>
 </html>
